--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ body {
 .clickable {
   cursor: pointer;
 }
+
+.btn-circle {
+  width: 70px;
+  height: 70px;
+  padding: 10px 16px;
+  border-radius: 50px;
+  font-size: 24px;
+  line-height: 1.33;
+}
