--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,13 @@ body {
   width: 70px;
   height: 70px;
   padding: 10px 16px;
-  border-radius: 50px;
+  border-radius: 50px !important;
   font-size: 24px;
   line-height: 1.33;
+}
+
+.add-btn {
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
